--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -40,6 +40,9 @@
             <strong>There are no pages present.</strong>
         {% endif %}
     </div>
+	<div>
+		<a href="/rango/add_category/">Add a New Category</a><br />
+	</div>
     <div>
         <a href="/rango/about/">About</a><br/>
         <img src="{% static 'images/peek.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
