--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+
+{% load staticfiles %} <!-- New line -->
 
 
-<html>
-    <head>
-        <title>About page</title>
-    </head>
-<body>
-    <h1>Rango says this is the about page</h1>
-    <div>
-        <strong>{{ boldmessage }}</strong><br/>
-    </div>
-    <div>
-        <a href="/rango/">Index</a><br/>
-        <img src='{{ MEDIA_URL}}cat.jpg'
-            alt="Cat picture" /> <!-- New line -->
-    </div>
-    </body>
-</html>
+	{% load staticfiles %}
+	{% block title_block %}
+		About
+	{% endblock %}
+	
+	{% block body_block %}
+        <div>
+	        <h1 class="page-header">About Page</h1>			
+	        This tutorial has been put together by Hristo 
+		</div>	
+		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+		<p>
+		<img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a Cat">
+		
+	{% endblock %}
