--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,51 +1,51 @@
-<!DOCTYPE html>
-{% load staticfiles %} <!-- New line -->
-
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-<body>
-    <h1>Rango says...</h1>
-    <div>
-        hey there partner!
-    </div>
-    <div>
-        <h2>Most liked categories!</h2>
-        {% if categories %}
-        <ul>
-            {% for category in categories %}
-               <!-- Following line changed to add an HTML hyperlink -->
-                <li>
-                    <a href="/rango/category/{{ category.slug }}">{{ category.name }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-        {% else %}
-            <strong>There are no categories present.</strong>
-        {% endif %}
-    </div>
-    <div>
-        <h2>Most viewed pages!</h2>
-        {% if pages %}
-        <ul>
-               <!-- Following line changed to add an HTML hyperlink -->
-                {% for page in pages %}
-                <li>
-                    <a href="{{ page.url }}">{{ page.title }}</a>
-                </li>
-                {% endfor %}
-        </ul>
-        {% else %}
-            <strong>There are no pages present.</strong>
-        {% endif %}
-    </div>
+{% extends 'rango/base.html' %}
+	{% load staticfiles %}
+	{% block title_block %}
+		Index
+	{% endblock %}
+	
+	{% block body_block %}
+	
 	<div>
-		<a href="/rango/add_category/">Add a New Category</a><br />
-	</div>
-    <div>
-        <a href="/rango/about/">About</a><br/>
-        <img src="{% static 'images/peek.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
-    </div>
-    </body>
-</html>
+		<h1>Rango says...</h1>
+			<p>hey there partner! </p>
+			
+ 	</div>
+			
+		<div>
+			<div>
+				<h4>Most Liked Categories</h4>
+				<p>
+		         	{% if categories %}
+		             <ul>
+		                 {% for category in categories %}
+		                 	<li><a href="{% url 'show_category' category.slug %}">{{ category.name }}</a> {{category.likes}}</li>
+		                 {% endfor %}
+		             </ul>
+		        {% else %}
+		             <strong>There are no categories present.</strong>
+		        {% endif %}
+				
+				</p>
+
+			</div>
+			<div>
+				<h4>Most Viewed Pages</h4>
+				<p>
+				{% if pages %}
+				<ul>
+				{% for page in pages %}
+				 <li><a href="{{ page.url }}"\>{{ page.title }}</a> {{page.views}}</li>
+				 {% endfor %}
+				 </ul>
+				{% else %}
+				<strong>There are no categories present.</strong>
+			 {% endif %}
+				</p>
+			</div>
+		</div>	
+						
+		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
+		
+	{% endblock %}
+
