--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -8,7 +8,11 @@
 	
 	<div>
 		<h1>Rango says...</h1>
-			<p>hey there partner! </p>
+			{% if user.is_authenticated %}
+			howdy {{ user.username }}!
+			{% else %}
+			hey there partner!
+			{% endif %}
 			
  	</div>
 			
@@ -45,7 +49,9 @@
 			</div>
 		</div>	
 						
-		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
+		<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango"/>
+		
+		
 		
 	{% endblock %}
 
