--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,8 +1,5 @@
 {% extends 'rango/base.html' %}
 
-{% load staticfiles %} <!-- New line -->
-
-
 	{% load staticfiles %}
 	{% block title_block %}
 		About
@@ -11,7 +8,8 @@
 	{% block body_block %}
         <div>
 	        <h1 class="page-header">About Page</h1>			
-	        This tutorial has been put together by Hristo 
+	        {{boldmessage}}
+			<h3>{{visits}}</h3>
 		</div>	
 		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
 		<p>
