--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -9,7 +9,7 @@
         <div>
 	        <h1 class="page-header">About Page</h1>			
 	        {{boldmessage}}
-			<h3>{{visits}}</h3>
+			<h3><p> visits: {{ visits }}</p></h3>
 		</div>	
 		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
 		<p>
